[gd_scene load_steps=11 format=2]

[ext_resource path="res://menu/nuvem.gd" type="Script" id=1]
[ext_resource path="res://menu/informacoes/instrucoes/Tela_instrucoes.gd" type="Script" id=2]
[ext_resource path="res://assets/Retro Gaming.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/botao_volta.png" type="Texture" id=4]
[ext_resource path="res://assets/base_cartas.png" type="Texture" id=5]
[ext_resource path="res://assets/cenario_farol_de_ponta_verde.png" type="Texture" id=6]
[ext_resource path="res://assets/nuvenzinha.png" type="Texture" id=7]
[ext_resource path="res://assets/background.png" type="Texture" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.8
height = 1.52588e-05

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Fundo_azul" type="Sprite" parent="."]
position = Vector2( 257, 150 )
scale = Vector2( 2.1, 2 )
texture = ExtResource( 8 )

[node name="nuvem" type="KinematicBody2D" parent="."]
position = Vector2( 12, 73 )
scale = Vector2( 2.5, 2.5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="nuvem"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="nuvem"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 256, 143 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 57.0
margin_top = 47.0
margin_right = 477.0
margin_bottom = 303.0
rect_scale = Vector2( 1.00549, 1.21291 )
rect_pivot_offset = Vector2( 223, 241 )
color = Color( 0.415686, 0.643137, 0.933333, 0.913725 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 256, 66 )
rotation = -1.57366
scale = Vector2( 1.715, 3.425 )
texture = ExtResource( 5 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 256, 138 )
rotation = -1.57366
scale = Vector2( 1.715, 3.425 )
texture = ExtResource( 5 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 6.0
margin_top = 40.0
margin_right = 446.0
margin_bottom = 488.0
rect_rotation = -89.7919
rect_scale = Vector2( 0.0862494, 0.106239 )
texture_normal = ExtResource( 4 )

[node name="TextureButton2" type="TextureButton" parent="."]
modulate = Color( 0.345098, 0.705882, 0.843137, 0.729412 )
margin_left = 179.0
margin_top = 34.0
margin_right = 269.0
margin_bottom = 95.0
rect_scale = Vector2( 1.69564, 1.02204 )

[node name="TextureButton3" type="TextureButton" parent="."]
modulate = Color( 0.345098, 0.705882, 0.843137, 0.729412 )
margin_left = 183.0
margin_top = 108.0
margin_right = 270.0
margin_bottom = 175.0
rect_scale = Vector2( 1.70288, 0.976612 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 226.0
margin_top = 128.0
margin_right = 298.0
margin_bottom = 149.0
rect_scale = Vector2( 0.792718, 1.12503 )
custom_fonts/font = SubResource( 2 )
text = "EXTRAS"

[node name="Label2" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 214.0
margin_top = 55.0
margin_right = 329.0
margin_bottom = 76.0
rect_scale = Vector2( 0.714378, 1.11452 )
custom_fonts/font = SubResource( 2 )
text = "COMO JOGAR"

[node name="Label3" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 174.0
margin_top = 7.0
margin_right = 294.0
margin_bottom = 28.0
rect_scale = Vector2( 1.333, 1.234 )
custom_fonts/font = SubResource( 2 )
text = "INSTRUÇÕES"

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_TextureButton3_pressed"]
